Fix text input on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -199,7 +199,7 @@ max-height: 400px;
   display: flex;
   justify-content: space-between;
   height: 5%;
- 
+
   width: 100%;
  
   color: #2ea1ff;
@@ -478,6 +478,7 @@ height: 100%;
   position: absolute;
   bottom: 0;
   width: 100%;
+  min-height: 45px;
   height: 5%;
   max-height: 50px;
   display: flex;
@@ -731,8 +732,50 @@ width: 100%;
 }
 
   
+
+.chat-top-navbar {
+ 
+  height: 7vh;
+
+  width: 100%;
+ 
+  color: #2ea1ff;
+  padding: 0px 5px 0px 0px;
+  
+    position: fixed;
+    top: 0;
+    left: 0;
+ 
+}
+
+.chat-window-right-panel {
+ 
+ 
+  max-height: 93%;
+  height: 93%;
+  width: 83.3%;
   
   }
 
+
+  .top-chat-name-container {
+    
+  
+    height: 8%;
+   
+  }
+
+
+
+
+  .input-box-container {
+   height: 50px;
+    
+  }
+
+
+
+
+}
 
 
